key display flex, fixed mobile alignment

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -191,63 +191,5 @@ h2
   }
 }
 
-//Map Key Styles //
 
-.key-states
-{
-  display: flex;
-  justify-content: center;
-  
-  .key-states-soon
-  {
-    padding: 10px 20px;
-    color: #666;
-    
-    &:before
-    {
-      content: '';
-      width: 15px;
-      height: 14px;
-      border-radius: 50%;
-      display: inline-block;
-      margin-right: 4px;
-      background: #ea504e;
-      vertical-align: middle;
-    }
-  }
-  .key-states-upcoming
-  {
-    padding: 10px 20px;
-    color: #666;
-    
-    &:before
-    {
-      content: '';
-      width: 14px;
-      height: 14px;
-      border-radius: 50%;
-      display: inline-block;
-      margin-right: 4px;
-      background: #0076d7;
-      vertical-align: middle;
-    }
-  }
-  .key-states-past
-  {
-    padding: 10px 20px;
-    color: #666;
-    
-    &:before
-    {
-      content: '';
-      width: 14px;
-      height: 14px;
-      border-radius: 50%;
-      display: inline-block;
-      margin-right: 4px;
-      background: #999;
-      vertical-align: middle;
-    }
-  }
-}
 
